# -french-translation-engine-in-c-

./: .gitignore  CMakeLists.txt  README.md  config.xml  deps.txt  dockerfile
src/: CompletionPool.hpp  config.cpp  config.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp  translator.cpp  translator.hpp
